--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+
+    >
+
 
     <TextView
+        android:id="@+id/editlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center"
+        android:textColor="#009688"
+        android:layout_marginTop="150dp"
+        android:text="Apontapp"
+        android:textSize="30sp"
+        android:textStyle="bold|italic" />
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/editemail"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:hint="Email"
+        android:inputType="text"
+
+        />
+
+    <EditText
+        android:id="@+id/editpwd"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:hint="Password"
+        android:inputType="textPassword"
+
+        />
+
+    <Button
+        android:id="@+id/btn_Login"
+        android:layout_width="118dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="#FF9800"
+        android:hint="btn_Entrar"
+        android:text="Entrar" />
+
+    <Button
+        android:id="@+id/btn_Registar"
+        android:layout_width="187dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:background="#E26C47"
+        android:text="REGISTAR"
+        android:textAlignment="center"
+        android:textColor="#0E0E0E" />
+
+
+
+</LinearLayout>
