--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,4 +30,10 @@
         app:backgroundTint="#00414141"
         app:srcCompat="@android:drawable/ic_input_add" />
 
+    <ListView
+        android:layout_marginTop="55dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end" />
+
 </android.support.design.widget.CoordinatorLayout>
