--- a/app/src/main/res/layout/activity_regist.xml
+++ b/app/src/main/res/layout/activity_regist.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     >
-
 
 
     <TextView
@@ -15,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="50dp"
         android:text="Apontapp"
         android:textColor="#009688"
         android:textSize="30sp"
@@ -23,8 +19,10 @@
 
     <EditText
         android:id="@+id/editName"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:hint="Nome"
@@ -35,8 +33,10 @@
 
     <EditText
         android:id="@+id/editEmail"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:hint="Email"
@@ -46,8 +46,10 @@
 
     <EditText
         android:id="@+id/editPass"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:hint="Password"
@@ -57,10 +59,11 @@
 
     <EditText
         android:id="@+id/editPassConfirm"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:layout_marginTop="10dp"
-        android:layout_gravity="center"
         android:hint="Confirmar Password"
         android:inputType="textPassword"
 
@@ -68,9 +71,10 @@
 
     <Button
         android:id="@+id/btn_Regist"
-        android:layout_width="199dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:layout_marginTop="10dp"
         android:background="#FF9800"
         android:hint="btn_Entrar"
