--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,6 +20,11 @@
     </android.support.design.widget.AppBarLayout>
 
 
+
+<android.support.v7.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -30,10 +35,5 @@
         app:backgroundTint="#00414141"
         app:srcCompat="@android:drawable/ic_input_add" />
 
-    <ListView
-        android:layout_marginTop="55dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end" />
 
 </android.support.design.widget.CoordinatorLayout>
