--- a/app/src/main/res/layout/row_list.xml
+++ b/app/src/main/res/layout/row_list.xml
@@ -15,23 +15,23 @@
     <TextView
         android:id="@+id/list_row"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginRight="100dp"
         android:layout_marginLeft="@dimen/fab_margin"
-        android:layout_marginTop="@dimen/fab_margin"
-        android:layout_marginRight="80dp"
         android:textSize="20dp"
+        android:gravity="left|center"
         android:textColor="#1A1919"
         />
 
     <TextView
         android:id="@+id/textViewOptions"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="-50dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginLeft="-100dp"
         android:text="&#8942;"
-
+        android:textSize="20dp"
         android:textStyle="bold"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000" />
 
