--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,6 +19,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <TextView
+        android:id="@+id/nolists"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Ainda não contém listas! Clique no botão para adicionar uma nova lista!"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:visibility="invisible"/>
+
 
 
 <android.support.v7.widget.RecyclerView
