Password Recovery Activity
Password recovery with MVVM architecture

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textColor="#009688"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:text="Apontapp"
         android:textSize="30sp"
         android:textStyle="bold|italic" />
@@ -25,8 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="105dp"
-        android:layout_marginRight="105dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_gravity="center"
         android:hint="Email"
         android:inputType="text"
@@ -38,8 +38,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="105dp"
-        android:layout_marginRight="105dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:layout_gravity="center"
         android:hint="Password"
         android:inputType="textPassword"
@@ -70,6 +70,20 @@
         android:text="REGISTAR"
         android:textAlignment="center"
         android:textColor="#0E0E0E" />
+
+
+    <TextView
+        android:id="@+id/resetPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:textColor="#043D38"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:text="Recuperar Password"
+        android:textSize="15sp"
+        android:textStyle="normal"
+        />
 
 
 
