--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="10dp"
     tools:context=".Products.ProductsActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -20,15 +21,32 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_products" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerviewproducts"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="50dp"></android.support.v7.widget.RecyclerView>
+
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_newprod"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="#444141"
         app:srcCompat="@android:drawable/ic_input_add" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginRight="80dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="20dp"
+        android:background="#CF9117"
+        android:text="Concluir Lista" />
+
 
 </android.support.design.widget.CoordinatorLayout>
