--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_gastos"
 
+        app:showAsAction="ifRoom"
+        android:title="Gastos">
+    </item>
+    <item
+        android:id="@+id/action_logout"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_logout"
+        android:title="Logout">
+    </item>
 </menu>
