--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -45,7 +45,7 @@
         android:layout_marginRight="80dp"
         android:layout_marginLeft="15dp"
         android:layout_marginBottom="20dp"
-        android:background="#CF9117"
+        android:background="#E09A0E"
         android:text="Concluir Lista" />
 
 
