--- a/app/src/main/res/layout/row_list_products.xml
+++ b/app/src/main/res/layout/row_list_products.xml
@@ -3,22 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_marginTop="@dimen/fab_margin"
+    android:layout_height="40dp"
+    android:layout_marginTop="10dp"
     android:layout_marginLeft="@dimen/fab_margin"
     android:layout_marginRight="@dimen/fab_margin"
     android:layout_marginBottom="@dimen/fab_margin"
-    android:background="#F0F0F0"
+
     >
 
  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
-     android:layout_height="70dp"
+     android:layout_height="40dp"
      android:orientation="vertical"
      android:layout_marginRight="@dimen/fab_margin"
      android:layout_marginBottom="@dimen/fab_margin"
-     android:background="#F0F0F0">
+     >
 
 
      <TextView
@@ -30,32 +30,22 @@
          android:gravity="top"
          android:textColor="#050505"
          android:textSize="20dp"
-         android:textStyle="bold" />
+         />
 
-     <TextView
-         android:id="@+id/list_row_category"
-         android:layout_width="match_parent"
-         android:layout_height="30dp"
-         android:layout_marginLeft="@dimen/fab_margin"
-         android:layout_marginRight="100dp"
-         android:gravity="left"
-         android:textColor="#541A1919"
-         android:textSize="15dp" />
+
 
  </LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewAdd"
-        android:layout_width="85dp"
-        android:layout_height="70dp"
+    <CheckBox
+        android:id="@+id/btnViewAdd"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="top|end"
-        android:layout_marginLeft="-100dp"
-        android:gravity="center"
-        android:text="&#8942;"
+        android:layout_marginLeft="-50dp"
+        android:gravity="center|end"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+         />
 
 
 </LinearLayout>
