--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -40,12 +40,13 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_gravity="bottom"
-        android:layout_marginRight="80dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginRight="150dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="30dp"
         android:background="#E09A0E"
+
         android:text="Concluir Lista" />
 
 
