--- a/app/src/main/res/layout/row_list_products.xml
+++ b/app/src/main/res/layout/row_list_products.xml
@@ -27,7 +27,7 @@
          android:layout_height="40dp"
          android:layout_marginLeft="@dimen/fab_margin"
          android:layout_marginRight="100dp"
-         android:gravity="top"
+         android:gravity="left|center"
          android:textColor="#050505"
          android:textSize="20dp"
          />
