--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -46,7 +46,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginBottom="30dp"
         android:background="#E09A0E"
-
+        android:id="@+id/btn_AddProductToList"
         android:text="Concluir Lista" />
 
 
