Topbar buttons on remaining activities

--- a/app/src/main/res/layout/activity_edit_list.xml
+++ b/app/src/main/res/layout/activity_edit_list.xml
@@ -27,7 +27,7 @@
         android:inputType="text" />
 
     <Button
-        android:id="@+id/btn_NewList"
+        android:id="@+id/btn_EditList"
         android:layout_width="199dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
