--- a/app/src/main/res/layout/row_list_products.xml
+++ b/app/src/main/res/layout/row_list_products.xml
@@ -30,6 +30,7 @@
          android:gravity="left|center"
          android:textColor="#050505"
          android:textSize="20dp"
+         android:onClick="itemClicked"
          />
 
 
@@ -45,6 +46,7 @@
         android:gravity="center|end"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
+        android:onClick="itemClicked"
          />
 
 
