--- a/app/src/main/res/layout/activity_spending.xml
+++ b/app/src/main/res/layout/activity_spending.xml
@@ -27,7 +27,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSpending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calcular"
