--- a/app/src/main/res/layout/row_list_spending.xml
+++ b/app/src/main/res/layout/row_list_spending.xml
@@ -32,7 +32,8 @@
         android:textStyle="bold"
         android:gravity="center"
         android:ems="10"
-        android:inputType="number" />
+        android:text="0"
+        android:inputType="numberDecimal" />
 
 
 
